--- a/html/portfolio/portfolio6.html
+++ b/html/portfolio/portfolio6.html
@@ -17,6 +17,7 @@
     <script src="../../script/menu.js" defer="defer"></script>
     <script src="../../script/gsap.js" defer="defer"></script>
     <script src="../../script/red_knight.js" defer=defer></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -27,32 +28,40 @@
 </head>
 
 <body>
-    <div id="wrapper">
-        <header>
-            <div id="top-bar">
-                <a href="../../html/index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
-                        id="capytech-icon"></a>
-                <button id="hamburger-menu" class="hamburger-menu">&#127828;</button>
+    <div class="flex flex-col min-h-screen mx-auto px-1 py-1 bg-slate-800 text-white">
+        <header class="md:flex bg-slate-800 sticky top-0 z-50">
+            <div class="flex justify-between">
+                <a href="./index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
+                        class="max-w-10"></a>
+                <button id="hamburger-menu" class="text-3xl md:hidden">&#127828;</button>
             </div>
-            <nav id="main-nav">
-                <ul id="nav-ul">
-                    <li class="nav-li"><a class="nav-link" href="../index.html">Home</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../portfolio/index.html">Portfolio</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../articles/index.html">Articles</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../about/index.html">About</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../resume/index.html">Resume</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../contact/index.html">Contact</a></li>
+            <nav>
+                <ul class="md:flex">
+                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/index.html">Home</a></li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a
+                            href="../../html/portfolio/index.html">Portfolio</a></li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a
+                            href="../../html/articles/index.html">Articles</a>
+                    </li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/about/index.html">About</a>
+                    </li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/resume/index.html">Resume</a>
+                    </li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a
+                            href="../../html/contact/index.html">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
-
-        <main>
-
-            <div id="portfolio-main">
-                <h1>Capytech Portfolio</h1>
-                <h2>GameProjects</h2>
-                <h3>Game Projects using JavaScript</h3>
-                <h4>JavaScript RPG Project</h4>
+        <main class="flex-1">
+            <div class=" py-2 max-w-6xl mx-auto">
+                <h2 class="text-4xl text-center py-10">JavaScript RPG Project</h2>
+                <h3 class="text-xl text-teal-300">Instructions</h3>
+                <p class="py-2">Use W A S D keys to move the red knight and explore the island! This is my fourth
+                    JavaScript game
+                    development
+                    project, fully written in JavaScript. I am considering adding more features
+                    such as battle sequences, experience points, items, and level-ups.</p>
                 <div id="container">
                     <div id="container2"></div>
                     <canvas id="canvas"></canvas>
@@ -88,10 +97,6 @@
                     <button id="down-button">&#8595;</button>
                     <button id="right-button">&#8594;</button>
                 </div>
-                <p>Use W A S D keys to move the red knight and explore the island! This is my fourth JavaScript game
-                    development
-                    project, fully written in JavaScript. I am considering adding more features
-                    such as battle sequences, experience points, items, and level-ups.</p>
                 <h4>Sprites credits to (sources):</h4>
                 <ul>
                     <li><a href="https://robertpinero.itch.io/free-rpg-mv-class-sprites" target="_blank">Red Knight</a>
