--- a/html/portfolio/portfolio7.html
+++ b/html/portfolio/portfolio7.html
@@ -16,6 +16,7 @@
     <script src="../../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../../script/menu.js" defer="defer"></script>
     <script src="../../script/smup.js" defer="defer"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -26,31 +27,38 @@
 </head>
 
 <body>
-    <div id="wrapper">
-        <header>
-            <div id="top-bar">
-                <a href="../../html/index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
-                        id="capytech-icon"></a>
-                <button id="hamburger-menu" class="hamburger-menu">&#127828;</button>
+    <div class="flex flex-col min-h-screen mx-auto px-1 py-1 bg-slate-800 text-white">
+        <header class="md:flex bg-slate-800 sticky top-0 z-50">
+            <div class="flex justify-between">
+                <a href="./index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
+                        class="max-w-10"></a>
+                <button id="hamburger-menu" class="text-3xl md:hidden">&#127828;</button>
             </div>
-            <nav id="main-nav">
-                <ul id="nav-ul">
-                    <li class="nav-li"><a class="nav-link" href="../index.html">Home</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../portfolio/index.html">Portfolio</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../articles/index.html">Articles</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../about/index.html">About</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../resume/index.html">Resume</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../contact/index.html">Contact</a></li>
+            <nav>
+                <ul class="md:flex">
+                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/index.html">Home</a></li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a
+                            href="../../html/portfolio/index.html">Portfolio</a></li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a
+                            href="../../html/articles/index.html">Articles</a>
+                    </li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/about/index.html">About</a>
+                    </li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/resume/index.html">Resume</a>
+                    </li>
+                    <li class="px-5 py-3 text-center hidden md:block"><a
+                            href="../../html/contact/index.html">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
-
-        <main>
-            <div id="portfolio-main">
-                <h1>Capytech Portfolio</h1>
-                <h2>GameProjects</h2>
-                <h3>Game Projects using JavaScript</h3>
-                <h4>JavaScript Smup Project</h4>
+        <main class="flex-1">
+            <div class=" py-2 max-w-4xl mx-auto">
+                <h4 class="text-4xl text-center py-10">JavaScript Smup Project</h4>
+                <h3 class="text-xl text-teal-300">Instructions:</h3>
+                <p class="py-2">Use <strong>WASD or the four buttons above</strong> to move the yellow spacecraft. Use
+                    <strong>L</strong> to <strong>shoot lasers</strong>.
+                </p>
                 <div id="container">
                     <div id="lives"></div>
                     <div id="score"></div>
@@ -69,10 +77,6 @@
                     </div><!--end div buttons-->
                     <button id="shoot-button">Laser</button>
                 </div> <!--end div ui-->
-                <h3>Instructions:</h3>
-                <p>Use <strong>WASD or the four buttons above</strong> to move the yellow spacecraft. Use
-                    <strong>L</strong> to <strong>shoot lasers</strong>.
-                </p>
                 <h4>Sprites credits to (sources):</h4>
                 <ul>
                     <li><a href="https://craftpix.net/freebies/free-space-shooter-game-gui/"
