--- a/html/about/index.html
+++ b/html/about/index.html
@@ -32,20 +32,18 @@
                         class="max-w-10"></a>
                 <button id="hamburger-menu" class="text-3xl md:hidden">&#127828;</button>
             </div>
-            <nav>
+            <nav id="main-nav">
                 <ul class="md:flex">
-                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/index.html">Home</a></li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a
-                            href="../../html/portfolio/index.html">Portfolio</a></li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a
-                            href="../../html/articles/index.html">Articles</a>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/index.html">Home</a></li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/portfolio/index.html">Portfolio</a>
                     </li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/about/index.html">About</a>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/articles/index.html">Articles</a>
                     </li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/resume/index.html">Resume</a>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/about/index.html">About</a>
                     </li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a
-                            href="../../html/contact/index.html">Contact</a>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/resume/index.html">Resume</a>
+                    </li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -54,7 +52,7 @@
             <div class=" py-2 max-w-6xl mx-auto">
                 <h1 class="text-4xl text-center py-10">About Me</h1>
                 <div class="md:flex">
-                    <img src="../image/paul_kim.jpg" alt="Paul Kim" class="max-w-xs rounded-full">
+                    <img src="../image/paul_kim.jpg" alt="Paul Kim" class="max-w-30 md:max-w-xs rounded-full">
                     <div>
                         <p class="pt-10 pb-4 px-10">I was born in Belgium, grew up in Switzerland, and I am a permanent
                             resident of Canada. My
