--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -8,7 +8,7 @@
 -->
 
 <head>
-    <title>CapyTech | Portfolio</title>
+    <title>Paul Kim | Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
@@ -48,7 +48,6 @@
                 </ul>
             </nav>
         </header>
-
         <main class="flex-1">
             <div class=" py-2 max-w-6xl mx-auto">
                 <h2 class="text-4xl text-center py-10">Current Projects</h2>
@@ -72,7 +71,7 @@
                         </a>
                     </article>
                     <article class="py-2">
-                        <a href="https://codingcapy.github.io/capytech-react" class="md:flex">
+                        <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
                                 <img src="../image/react-project.jpg" alt="Banking System Prototype II"
                                     class="md:max-w-60">
@@ -130,7 +129,8 @@
                         </a>
                     </article>
                     <article class="py-2">
-                        <a href="./portfolio2.html" class="md:flex">
+                        <a href="https://codingcapy.github.io/jellyfishforest/html/index.html" target="_blank"
+                            class="md:flex">
                             <figure>
                                 <img src="../image/art-gallery-web-app.jpg" alt="Art Gallery Web App"
                                     class="md:max-w-60">
