--- a/html/about/index.html
+++ b/html/about/index.html
@@ -8,7 +8,7 @@
 -->
 
 <head>
-    <title>Capytech | About</title>
+    <title>Paul Kim | About</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
