--- a/html/portfolio/portfolio4.html
+++ b/html/portfolio/portfolio4.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../css/style.css">
     <script src="../../script/jquery-3.7.0.min.js" defer="defer"></script>
     <script src="../../script/menu.js" defer="defer"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
     <link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -24,33 +25,45 @@
 </head>
 
 <body>
-    <div id="wrapper">
-        <header>
-            <div id="top-bar">
-                <a href="../../html/index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
-                        id="capytech-icon"></a>
-                <button id="hamburger-menu" class="hamburger-menu">&#127828;</button>
+    <div class="flex flex-col min-h-screen mx-auto px-1 py-1 bg-slate-800 text-white">
+        <header class="md:flex bg-slate-800 sticky top-0 z-50">
+            <div class="flex justify-between">
+                <a href="./index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
+                        class="max-w-10"></a>
+                <button id="hamburger-menu" class="text-3xl md:hidden">&#127828;</button>
             </div>
             <nav id="main-nav">
-                <ul id="nav-ul">
-                    <li class="nav-li"><a class="nav-link" href="../index.html">Home</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../portfolio/index.html">Portfolio</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../articles/index.html">Articles</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../about/index.html">About</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../resume/index.html">Resume</a></li>
-                    <li class="nav-li"><a class="nav-link" href="../contact/index.html">Contact</a></li>
+                <ul class="md:flex">
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/index.html">Home</a></li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/portfolio/index.html">Portfolio</a>
+                    </li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/articles/index.html">Articles</a>
+                    </li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/about/index.html">About</a>
+                    </li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/resume/index.html">Resume</a>
+                    </li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/contact/index.html">Contact</a>
+                    </li>
                 </ul>
             </nav>
         </header>
-
-        <main>
-
-            <div id="portfolio-main">
-                <h1>Capytech Portfolio</h1>
-                <h2>GameProjects</h2>
-                <h3>Game Projects using Python Pygame Library</h3>
-                <h4>2D ARPG Project</h4>
-                <video src="../video/capy-game-design3.mp4" controls class="video"></video>
+        <main class="flex-1">
+            <div class=" py-2 max-w-6xl mx-auto">
+                <h4 class="text-4xl text-center py-10">2D ARPG Project</h4>
+                <video src="../video/capy-game-design3.mp4" controls class="mx-auto"></video>
+                <div class="py-2">
+                    <a href="https://github.com/codingcapy/CapyGameDesign3" aria-label="Homepage"
+                        class="footer-octicon flex" title="GitHub" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
+                            viewBox="0 0 50 50" style="fill:#FFFFFF;">
+                            <path
+                                d="M17.791,46.836C18.502,46.53,19,45.823,19,45v-5.4c0-0.197,0.016-0.402,0.041-0.61C19.027,38.994,19.014,38.997,19,39 c0,0-3,0-3.6,0c-1.5,0-2.8-0.6-3.4-1.8c-0.7-1.3-1-3.5-2.8-4.7C8.9,32.3,9.1,32,9.7,32c0.6,0.1,1.9,0.9,2.7,2c0.9,1.1,1.8,2,3.4,2 c2.487,0,3.82-0.125,4.622-0.555C21.356,34.056,22.649,33,24,33v-0.025c-5.668-0.182-9.289-2.066-10.975-4.975 c-3.665,0.042-6.856,0.405-8.677,0.707c-0.058-0.327-0.108-0.656-0.151-0.987c1.797-0.296,4.843-0.647,8.345-0.714 c-0.112-0.276-0.209-0.559-0.291-0.849c-3.511-0.178-6.541-0.039-8.187,0.097c-0.02-0.332-0.047-0.663-0.051-0.999 c1.649-0.135,4.597-0.27,8.018-0.111c-0.079-0.5-0.13-1.011-0.13-1.543c0-1.7,0.6-3.5,1.7-5c-0.5-1.7-1.2-5.3,0.2-6.6 c2.7,0,4.6,1.3,5.5,2.1C21,13.4,22.9,13,25,13s4,0.4,5.6,1.1c0.9-0.8,2.8-2.1,5.5-2.1c1.5,1.4,0.7,5,0.2,6.6c1.1,1.5,1.7,3.2,1.6,5 c0,0.484-0.045,0.951-0.11,1.409c3.499-0.172,6.527-0.034,8.204,0.102c-0.002,0.337-0.033,0.666-0.051,0.999 c-1.671-0.138-4.775-0.28-8.359-0.089c-0.089,0.336-0.197,0.663-0.325,0.98c3.546,0.046,6.665,0.389,8.548,0.689 c-0.043,0.332-0.093,0.661-0.151,0.987c-1.912-0.306-5.171-0.664-8.879-0.682C35.112,30.873,31.557,32.75,26,32.969V33 c2.6,0,5,3.9,5,6.6V45c0,0.823,0.498,1.53,1.209,1.836C41.37,43.804,48,35.164,48,25C48,12.318,37.683,2,25,2S2,12.318,2,25 C2,35.164,8.63,43.804,17.791,46.836z">
+                            </path>
+                        </svg>
+                        <p class="py-3 px-2 text-teal-300 underline">Check out the Github repo here!</p>
+                    </a>
+                </div>
                 <p>This is actually my third game development project, all written in Python and using the pygame
                     library. This project taught me animations, screen scrolling, and tile generation. This is still a
                     work in progress, and I am still adding features and working on balancing.</p>
@@ -66,26 +79,24 @@
                 </ul>
             </div>
         </main>
-        <footer>
-            <div id="footer-wrapper1">
-                <div id="footer-contact">
-                    <h2>Contact</h2>
+        <footer class="mx-auto text-center">
+            <div class="md:flex">
+                <div class="py-2 md:px-5">
+                    <h2 class="text-xl text-teal-300">Contact</h2>
                     <ul>
                         <li>T: +1 (778) 994-4939</li>
                         <li>E: spkim0921@gmail.com</li>
                     </ul>
                 </div>
-                <div id="footer-location">
-                    <h2>Location</h2>
+                <div class="py-2 md:px-5">
+                    <h2 class="text-xl text-teal-300">Location</h2>
                     <ul>
                         <li>North Vancouver, BC</li>
                         <li>Canada</li>
                     </ul>
                 </div>
             </div>
-            <div id="copyright">
-                <p>Copyright&copy; 2022 Capytech. All rights reserved.</p>
-            </div>
+            <p class="py-2">Copyright&copy; 2022 Capytech. All rights reserved.</p>
         </footer>
     </div>
 </body>
