--- a/html/portfolio/portfolio8.html
+++ b/html/portfolio/portfolio8.html
@@ -34,20 +34,18 @@
                         class="max-w-10"></a>
                 <button id="hamburger-menu" class="text-3xl md:hidden">&#127828;</button>
             </div>
-            <nav>
+            <nav id="main-nav">
                 <ul class="md:flex">
-                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/index.html">Home</a></li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a
-                            href="../../html/portfolio/index.html">Portfolio</a></li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a
-                            href="../../html/articles/index.html">Articles</a>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/index.html">Home</a></li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/portfolio/index.html">Portfolio</a>
                     </li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/about/index.html">About</a>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/articles/index.html">Articles</a>
                     </li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a href="../../html/resume/index.html">Resume</a>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/about/index.html">About</a>
                     </li>
-                    <li class="px-5 py-3 text-center hidden md:block"><a
-                            href="../../html/contact/index.html">Contact</a>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/resume/index.html">Resume</a>
+                    </li>
+                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </nav>
