--- a/html/portfolio/portfolio6.html
+++ b/html/portfolio/portfolio6.html
@@ -8,7 +8,7 @@
 -->
 
 <head>
-    <title>CapyTech | Portfolio</title>
+    <title>Paul Kim | Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../css/style.css">
@@ -31,7 +31,7 @@
     <div class="flex flex-col min-h-screen mx-auto px-1 py-1 bg-slate-800 text-white">
         <header class="md:flex bg-slate-800 sticky top-0 z-50">
             <div class="flex justify-between">
-                <a href="./index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
+                <a href="../index.html"><img src="../../html/image/capyness.png" alt="Capytech Icon"
                         class="max-w-10"></a>
                 <button id="hamburger-menu" class="text-3xl md:hidden">&#127828;</button>
             </div>
