--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,7 @@
         <main class="flex-1 max-w-7xl mx-auto">
             <div class=" py-2 md:flex mx-auto">
                 <div class="my-10 pr-10 md:border-r-2 flex-1">
-                    <h1 class="text-6xl">Hi, I'm Paul</h1>
+                    <h1 class="text-6xl">Hi, I'm <span class="text-teal-300">Paul</span></h1>
                     <h2 class="text-2xl py-2">Full Stack Software Engineer</h2>
                     <p class="py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
                         Canada. I build modern websites using Express.js, Next.js, React.js, and Node.js.</p>
