--- a/html/index.html
+++ b/html/index.html
@@ -50,7 +50,7 @@
             <div class=" py-2 md:flex mx-auto">
                 <div class="my-10 pr-10 md:border-r-2 flex-1">
                     <div class="sticky top-20 z-30">
-                        <h1 class="text-6xl">Hi, I'm <span class="text-teal-300">Paul</span></h1>
+                        <h1 class="text-6xl" id="">Hi, I'm <span class="text-teal-300">Paul</span></h1>
                         <h2 class="text-2xl py-2">Full Stack Software Engineer</h2>
                         <p class="py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
                             Canada. I build modern websites using Express.js, Next.js, React.js, and Node.js.</p>
@@ -202,10 +202,7 @@
                                             <p class="text-gray-400">It seems every ex-Google ex-Facebook ex-[insert FAANG name]
                                                 tech influencer on
                                                 social
-                                                media has their own video on how to become a software developer nowadays. And
-                                                each
-                                                of them tell you to learn different languages in different order. Confusing
-                                                much?
+                                                media has their own video on how to become a software developer nowadays.
                                             </p>
                                         </figcaption>
                                     </a>
@@ -221,10 +218,7 @@
                                             <p class="text-gray-400">I'm going to start by being honest and declaring that I do
                                                 use chatGPT's or its
                                                 variants's
-                                                help on a regular basis when I develop software (I'm going to refer to all
-                                                versions of
-                                                OpenAI's machine learning chat software as chatGPT going forward for
-                                                simplicity).</p>
+                                                help on a regular basis when I develop software.</p>
                                         </figcaption>
                                     </a>
                                 </figure>
