--- a/html/index.html
+++ b/html/index.html
@@ -135,9 +135,9 @@
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                         <a href="https://react.dev/" target="_blank"><img src="../html/image/Reactjs.png" alt="React.js"
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
-                        <a href="https://expressjs.com/" target="_blank"><img src="../html/image/expressjs.jpg"
-                                alt="React.js"
-                                class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
+                        <a href="https://expressjs.com/" target="_blank" class="my-auto"><img src="../html/image/expressjs.jpg"
+                                alt="Express.js"
+                                class="mx-auto my-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                         <a href="https://nextjs.org/" target="_blank"><img src="../html/image/nextjs.jpg" alt="React.js"
                                 class="mx-auto md:max-w-20 transition-transform ease-in-out duration-300 hover:scale-125"></a>
                     </div>
