--- a/html/index.html
+++ b/html/index.html
@@ -33,14 +33,14 @@
             </div>
             <nav id="main-nav">
                 <ul class="md:flex">
-                    <li class="px-5 py-3 text-center md:block"><a href="../html/index.html">Home</a></li>
-                    <li class="px-5 py-3 text-center md:block"><a href="../html/portfolio/index.html">Portfolio</a></li>
-                    <li class="px-5 py-3 text-center md:block"><a href="../html/articles/index.html">Articles</a>
+                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/index.html">Home</a></li>
+                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/portfolio/index.html">Portfolio</a></li>
+                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/articles/index.html">Articles</a>
                     </li>
-                    <li class="px-5 py-3 text-center md:block"><a href="../html/about/index.html">About</a></li>
-                    <li class="px-5 py-3 text-center md:block"><a href="../html/resume/index.html">Resume</a>
+                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/about/index.html">About</a></li>
+                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/resume/index.html">Resume</a>
                     </li>
-                    <li class="px-5 py-3 text-center md:block"><a href="../html/contact/index.html">Contact</a>
+                    <li class="px-5 py-3 text-center md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -55,7 +55,7 @@
                         <p class="py-2 text-gray-400">I am a full stack developer based in Vancouver, British Columbia,
                             Canada. I build modern websites using Express.js, Next.js, React.js, and Node.js.</p>
                         <div class="flex py-5">
-                            <div class="">
+                            <div class=" rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                                 <a href="https://www.linkedin.com/in/sunghun-kim-19244250/?locale=en_US"
                                     target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="55" height="55"
@@ -66,7 +66,7 @@
                                     </svg>
                                 </a>
                             </div>
-                            <div class="px-5">
+                            <div class="px-5 rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                                 <a href="https://github.com/codingcapy/" aria-label="Homepage" class="footer-octicon"
                                     title="GitHub" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
@@ -77,7 +77,7 @@
                                     </svg>
                                 </a>
                             </div>
-                            <div>
+                            <div class=" rounded-md transition ease-in-out duration-300 hover:bg-slate-500">
                                 <a href="https://www.instagram.com/capybara0921/" target="_blank">
                                     <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50" height="50"
                                         viewBox="0 0 50 50" style="fill:#FFFFFF;">
@@ -145,7 +145,7 @@
                     <article class="py-10">
                         <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                             <figure>
-                                <img src="./image/capysocial.jpg" alt="Banking System Prototype II" class="md:max-w-60">
+                                <img src="./image/capysocial.jpg" alt="Banking System Prototype II" class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300 ">Reddit Clone Full Stack Web App</h3>
@@ -164,7 +164,7 @@
                         <a href="https://codingcapy.github.io/capytech-react" target="_blank" class="md:flex">
                             <figure>
                                 <img src="./image/react-project.jpg" alt="Banking System Prototype II"
-                                    class="md:max-w-60">
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300">Youtube Clone Front End React</h3>
@@ -178,7 +178,7 @@
                     <article class="py-10">
                         <a href="./portfolio/portfolio6.html" class="md:flex">
                             <figure>
-                                <img src="./image/red_knight.jpg" alt="Banking System Prototype II" class="md:max-w-60">
+                                <img src="./image/red_knight.jpg" alt="Banking System Prototype II" class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                             </figure>
                             <figcaption class="md:pl-10">
                                 <h3 class="text-xl text-teal-300">JavaScript RPG</h3>
@@ -194,7 +194,7 @@
                             <article class="py-2">
                                 <figure>
                                     <a href="./articles/article4.html" class="md:flex">
-                                        <img src="./image/programming-languages.JPG" alt="ChatGPT" class="md:max-w-60">
+                                        <img src="./image/programming-languages.JPG" alt="ChatGPT" class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">OOP, Procedural Programming, Data Structures and
                                                 Algorithms</h2>
@@ -211,7 +211,7 @@
                             <article class="py-2">
                                 <figure>
                                     <a href="./articles/article3.html" class="md:flex">
-                                        <img src="./image/chatgpt.jpg" alt="ChatGPT" class="md:max-w-60">
+                                        <img src="./image/chatgpt.jpg" alt="ChatGPT" class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">ChatGPT</h2>
                                             <p>Posted on: April 12, 2023</p>
@@ -227,7 +227,7 @@
                                 <figure>
                                     <a href="./articles/article1.html" class="md:flex">
                                         <img src="./image/scrum-project-board.jpg" alt="Scrum Project Board"
-                                            class="md:max-w-60">
+                                            class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
                                         <figcaption class="md:pl-10">
                                             <h2 class="text-xl text-teal-300">Scrum Project</h2>
                                             <p>Posted on: April 10, 2023</p>
