--- a/html/portfolio/portfolio8.html
+++ b/html/portfolio/portfolio8.html
@@ -36,16 +36,16 @@
             </div>
             <nav id="main-nav">
                 <ul class="md:flex">
-                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/index.html">Home</a></li>
-                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/portfolio/index.html">Portfolio</a>
+                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/index.html">Home</a></li>
+                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/portfolio/index.html">Portfolio</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/articles/index.html">Articles</a>
+                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/articles/index.html">Articles</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/about/index.html">About</a>
+                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/about/index.html">About</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/resume/index.html">Resume</a>
+                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/resume/index.html">Resume</a>
                     </li>
-                    <li class="px-5 py-3 text-center  md:block"><a href="../../html/contact/index.html">Contact</a>
+                    <li class="px-5 py-3 text-center  md:block rounded-md transition ease-in-out duration-300 hover:bg-slate-500"><a href="../../html/contact/index.html">Contact</a>
                     </li>
                 </ul>
             </nav>
@@ -53,6 +53,12 @@
         <main class="flex-1">
             <div class=" py-2 max-w-6xl mx-auto">
                 <h4 class="text-4xl text-center py-10">JavaScript Platform Game Project</h4>
+                <h3 class="text-xl text-teal-300">Instructions:</h3>
+                <p class="py-2">Use <strong>A and D</strong> to move the character. Use <strong>W</strong> to
+                    <strong>Jump</strong>, <strong>Left Shift</strong> to <strong>dash</strong>, <strong>L</strong> to
+                    <strong>attack</strong>, and <strong>K</strong> for <strong>special attack</strong>. You can also
+                    use the buttons below to control your character without a keyboard.
+                </p>
                 <canvas id="canvas"></canvas>
                 <div id="ui">
                     <div id="buttons">
@@ -66,12 +72,7 @@
                     <button id="dash-button">Dash</button>
                     <button id="attack2-button">Atk2</button>
                 </div> <!--end div ui-->
-                <h3>Instructions:</h3>
-                <p>Use <strong>A and D</strong> to move the character. Use <strong>Space</strong> to
-                    <strong>Jump</strong>, <strong>Left Shift</strong> to <strong>dash</strong>, <strong>L</strong> to
-                    <strong>attack</strong>, and <strong>K</strong> for <strong>special attack</strong>. You can also
-                    use the buttons above to control your character without a keyboard.
-                </p>
+                
                 <h4>Sprites credits to (sources):</h4>
                 <ul>
                     <li><a href="https://www.deviantart.com/nikorios815/art/Cloud-Sprite-sheet-unfinished-607112056"
