--- a/html/portfolio/index.html
+++ b/html/portfolio/index.html
@@ -52,6 +52,25 @@
             <div class=" py-2 max-w-6xl mx-auto">
                 <h2 class="text-4xl text-center py-10">Current Projects</h2>
                 <div id="current-projects-section">
+                    <article class="py-10">
+                        <a href="https://codingcapy.github.io/capy-finance-client/" target="_blank" class="md:flex">
+                            <figure>
+                                <img src="../image/capyfinance.jpg" alt="Banking System Prototype II"
+                                    class="md:max-w-60 transition-transform ease-in-out duration-300 md:hover:scale-110">
+                            </figure>
+                            <figcaption class="md:pl-10">
+                                <div class="flex">
+                                    <h3 class="text-xl text-teal-300 pr-1">Personal Finance Full Stack Web App </h3>
+                                </div>
+                                <p class="text-gray-400">This project is a full-stack web app written in Node Express,
+                                    React Vite and MongoDB
+                                    that
+                                    uses json web
+                                    token user authentication and allows users to create financial plans.</p>
+                                <p>Stack: Node, Express, React, ChartJS, Vite, MongoDB, Render</p>
+                            </figcaption>
+                        </a>
+                    </article>
                     <article class="py-2">
                         <a href="https://codingcapy.github.io/cocodogo-client/" target="_blank" class="md:flex">
                             <figure>
