--- a/html/index.html
+++ b/html/index.html
@@ -120,7 +120,7 @@
                             Web Development</strong> certificates at British
                         Columbia Institute
                         of Technology (BCIT) and currently I am working
-                        towards the the Applied Computer Information Systems
+                        towards the Applied Computer Information Systems
                         certificate and Computer Systems Diploma concurrently.</p>
                     <h2 class="text-2xl py-2">My tech stack</h2>
                     <div class="grid grid-cols-3 py-10 md:gap-3 max-w-md mx-auto">
